# devops_ccsd_tech_challenge_conan_day01

./: CMakeLists.txt  conanfile.py
src/: day1.cpp
